[gd_scene load_steps=5 format=3 uid="uid://lfd54t3x8ogf"]

[ext_resource type="Script" uid="uid://cy3ld2r4ol3xx" path="res://scenes/splash_screen.gd" id="1_3mj2l"]
[ext_resource type="FontFile" uid="uid://c6pc4jiv0rtn5" path="res://assets/fonts/ZeroCool.woff2" id="4_5osyx"]

[sub_resource type="Resource" id="Resource_hsxvm"]
metadata/__load_path__ = "res://assets/images/scary_background.png"

[sub_resource type="Resource" id="Resource_4gp4q"]
metadata/__load_path__ = "res://assets/soundtrack/Epic intro (Cover).wav"

[node name="SplashScreen" type="CanvasLayer"]
script = ExtResource("1_3mj2l")
title = "LD 57"
image = SubResource("Resource_hsxvm")
audio = SubResource("Resource_4gp4q")
next_scene = 1

[node name="TextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 300)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -143.5
offset_right = 143.5
offset_bottom = 100.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("4_5osyx")
theme_override_font_sizes/font_size = 128
text = "SPLASH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 200)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="StartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("4_5osyx")
theme_override_font_sizes/font_size = 42
text = "Start"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("4_5osyx")
theme_override_font_sizes/font_size = 42
text = "Exit
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[connection signal="button_down" from="VBoxContainer/StartButton" to="." method="_handle_start_pressed"]
[connection signal="button_down" from="VBoxContainer/ExitButton" to="." method="_handle_exit_pressed"]
